--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </head>
 <body>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+  <div class="card">
+    <div class="text">
+      <img src="images/image-qr-code.png" alt="QR code">
+      <h1 class="title-text">  Improve your front-end skills by building projects </h1>
+      <p class="small-text">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level </p>
+    </div>
+  </div>  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer" >Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
