removed title-text class from h1 using default h1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="card">
     <div class="text">
       <img src="images/image-qr-code.png" alt="QR code">
-      <h1 class="title-text">  Improve your front-end skills by building projects </h1>
+      <h1>  Improve your front-end skills by building projects </h1>
       <p class="small-text">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level </p>
     </div>
   </div>  
