--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div class="text">
       <img src="images/image-qr-code.png" alt="QR code">
       <h1>  Improve your front-end skills by building projects </h1>
-      <p class="small-text">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level. They use HTML, CSS, and JS with some JS libraries to help developers build their understanding of the APIs that they provide for us! </p>
-      </p>
+      <p class="small-text">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level </p>
     </div>
   </div>  
   <div class="attribution">
