Improved alternative code text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="card">
     <div class="text">
-      <img src="images/image-qr-code.png" alt="QR code">
+      <img src="images/image-qr-code.png" alt="Navigates the users to https://www.frontendmentor.io/.">
       <h1>  Improve your front-end skills by building projects </h1>
       <p class="small-text">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level </p>
     </div>
