--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="style.css"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-
   <div class="card">
-    <div class="text">
-      <img src="images/image-qr-code.png" alt="Navigates the users to https://www.frontendmentor.io/.">
-      <h1>  Improve your front-end skills by building projects </h1>
-      <p class="small-text">  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level </p>
-    </div>
-  </div>  
+    <img src="/images/image-qr-code.png" alt="">
+  </div>
+  Improve your front-end skills by building projects
+
+  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  
   <div class="attribution">
-   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. 
-    Coded by <a href="https://www.github.com/TwoThreeTwp">TwoThreeTwo</a>
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
 </html>
