--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 </head>
 <body>
   <div class="card">
-    <img src="/images/image-qr-code.png" alt="">
-  </div>
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <img src="/images/image-qr-code.png" alt="scan this QR code to practice your front-end skills!">
+    <h1 class="title-content">
+      Improve your front-end skills by building projects
+    </h1>
+    <p class="description">
+      Scan the QR code to visit the Frontend Mentor and take your coding skills to the next level
+    </p>
+  </div>  
 </body>
 </html>
