--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="/images/image-qr-code.png" alt="image-qr-code" class="img-scan">
+    <img src="./images/image-qr-code.png" alt="image-qr-code" class="img-scan">
     <h1 class="title-content">
       Improve your front-end skills by building projects
     </h1>
