switch to sass for first project

--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="style.css"> 
+  <link rel="stylesheet/sass" href="style.sass">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="card">
-    <img src="./images/image-qr-code.png" alt="image-qr-code" class="img-scan">
-    <h1 class="title-content">
-      Improve your front-end skills by building projects
-    </h1>
-    <p class="description">
-      Scan the QR code to visit the Frontend Mentor and take your coding skills to the next level
-    </p>
-  </div>  
+
+  Improve your front-end skills by building projects
+
+  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
 </body>
 </html>
