--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
+  <div class="container">
+    <div class="card">
+      
+    </div>
+  </div>
 
   Improve your front-end skills by building projects
 
