--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
   <div class="container">
     <div class="card">
-      
+      <img src="./images/image-qr-code.png" alt="qr-code img">
+      <h1 class="title-content">
+        Improve your front-end skills by building projects
+      </h1>
+      <p class="description-content">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      </p>
     </div>
   </div>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
 </body>
 </html>
